# slime-client-tauri

./: .gitignore  package.json  requirements.txt
python/: main.py  slime_db.py  test.py  torrents.py  util.py
resources/: slime-config.json
resources/apps/: .gitignore
resources/apps/about/: index.html
src/: App.tsx  index.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  slime_nostr.rs  torrents.rs  util.rs
src/apps/about/: App.tsx
src/apps/main-menu/: App.css  App.tsx
src/apps/slime-streaming-tools/: App.tsx
src/components/: CharacterDisplay.tsx  CharactersTab.tsx  MidiControllerTab.tsx  MusicTab.tsx  VoiceControls.tsx
